tests/ui/endpoint/too_many_args.stderr
error: Too many arguments
 --> tests/ui/endpoint/too_many_args.rs:9:4
  |
9 | fn read_all(_id: u64) {}
  |    ^^^^^^^^

error[E0412]: cannot find type `read_all___gotham_restful_endpoint` in this scope
 --> tests/ui/endpoint/too_many_args.rs:4:10
  |
4 | #[derive(Resource)]
  |          ^^^^^^^^ not found in this scope
  |
  = note: this error originates in the derive macro `Resource` (in Nightly builds, run with -Z macro-backtrace for more info)
